--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "embla-carousel": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.22",
+    "gsap": "^3.13.0",
     "lucide-react": "0.544.0",
     "next": "15.5.3",
     "next-themes": "^0.4.6",
